feat: Implement Phase 234 + XLR8 Rebranding + Phase 5 Academic Profile
Phase 2 - Social Ecosystem:
- Rivals system with auto-matching algorithm
- Insight engine for IELTS  college mapping
- Rivals page with head-to-head comparison
- Mock data and offline mode support

Phase 3 - Creator & Alumni:
- Creator feed with verification badges
- Alumni connect platform with search/filtering
- Database schema for success stories and mentors

Phase 4 - Institution Integration:
- Application tracker with Kanban drag-and-drop
- Deadline tracking and urgency indicators
- Institution and application document tables

Rebranding - LEAP  XLR8:
- New brand identity: Accelerate Your IELTS Journey
- Updated all user-facing text and documentation
- Changed icon from  to
- Version bump to 2.0.0

Phase 5 - Academic Profile:
- LinkedIn-style academic profiles
- IELTS progress timeline with SVG visualization
- Achievement showcase integration
- Shareable profile links with privacy controls
- Web-based images (UI Avatars, Unsplash)

Database:
- Complete schema for all phases (234 + 5)
- Row Level Security policies
- Indexes for performance

Files: 15+ new components, 4 new services, comprehensive database schema

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "leap-sol",
+  "name": "xlr8-ielts",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
+  "description": "XLR8 - Accelerate Your IELTS Journey with Gamified Learning",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
